--- a/homeworks/HW9/HW9-Final.ipynb
+++ b/homeworks/HW9/HW9-Final.ipynb
@@ -76,16 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low ['3.16826710E+00', '-3.27931884E-03', '6.64306396E-06', '-6.12806624E-09', '2.11265971E-12', '2.91222592E+04', '2.05193346E+00']\n",
+      "low ['3.78245636E+00', '-2.99673416E-03', '9.84730201E-06', '-9.68129509E-09', '3.24372837E-12', '-1.06394356E+03', '3.65767573E+00']\n",
+      "low ['2.50000000E+00', '7.05332819E-13', '-1.99591964E-15', '2.30081632E-18', '-9.27732332E-22', '2.54736599E+04', '-4.46682853E-01']\n",
+      "low ['2.34433112E+00', '7.98052075E-03', '-1.94781510E-05', '2.01572094E-08', '-7.37611761E-12', '-9.17935173E+02', '6.83010238E-01']\n",
+      "low ['3.99201543E+00', '-2.40131752E-03', '4.61793841E-06', '-3.88113333E-09', '1.36411470E-12', '3.61508056E+03', '-1.03925458E-01']\n",
+      "low ['4.19864056E+00', '-2.03643410E-03', '6.52040211E-06', '-5.48797062E-09', '1.77197817E-12', '-3.02937267E+04', '-8.49032208E-01']\n",
+      "low ['4.30179801E+00', '-4.74912051E-03', '2.11582891E-05', '-2.42763894E-08', '9.29225124E-12', '2.94808040E+02', '3.71666245E+00']\n",
+      "low ['4.27611269E+00', '-5.42822417E-04', '1.67335701E-05', '-2.15770813E-08', '8.62454363E-12', '-1.77025821E+04', '3.43505074E+00']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "\"for i,k in enumerate(species_info):\\n    print(k)\\n    print(species_info[k]['h']['Tmax'])\\n    print(species_info[k]['h']['Tmin'])\\n    print(species_info[k]['h']['coeffs'])\\n    print(species_info[k]['l']['Tmax'])\\n    print(species_info[k]['l']['Tmin'])\\n    print(species_info[k]['l']['coeffs'])\""
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,15 +201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " O O2 H H2 OH H2O HO2 H2O2\n",
-      " O O2 H H2 OH H2O HO2 H2O2\n"
+     "ename": "TypeError",
+     "evalue": "cannot serialize 1000.0 (type float)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_escape_attrib\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m   1078\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1079\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;34m\"&\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1080\u001b[0m             \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"&\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"&amp;\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: argument of type 'float' is not iterable",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3f03fcec1474>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;31m#create xml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'thermo.xml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(self, file_or_filename, encoding, xml_declaration, default_namespace, method, short_empty_elements)\u001b[0m\n\u001b[1;32m    774\u001b[0m                 \u001b[0mserialize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_serialize\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    775\u001b[0m                 serialize(write, self._root, qnames, namespaces,\n\u001b[0;32m--> 776\u001b[0;31m                           short_empty_elements=short_empty_elements)\n\u001b[0m\u001b[1;32m    777\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    778\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrite_c14n\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_serialize_xml\u001b[0;34m(write, elem, qnames, namespaces, short_empty_elements, **kwargs)\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    940\u001b[0m                     _serialize_xml(write, e, qnames, None,\n\u001b[0;32m--> 941\u001b[0;31m                                    short_empty_elements=short_empty_elements)\n\u001b[0m\u001b[1;32m    942\u001b[0m                 \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"</\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\">\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    943\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_serialize_xml\u001b[0;34m(write, elem, qnames, namespaces, short_empty_elements, **kwargs)\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    940\u001b[0m                     _serialize_xml(write, e, qnames, None,\n\u001b[0;32m--> 941\u001b[0;31m                                    short_empty_elements=short_empty_elements)\n\u001b[0m\u001b[1;32m    942\u001b[0m                 \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"</\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\">\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    943\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_serialize_xml\u001b[0;34m(write, elem, qnames, namespaces, short_empty_elements, **kwargs)\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    940\u001b[0m                     _serialize_xml(write, e, qnames, None,\n\u001b[0;32m--> 941\u001b[0;31m                                    short_empty_elements=short_empty_elements)\n\u001b[0m\u001b[1;32m    942\u001b[0m                 \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"</\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\">\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    943\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_serialize_xml\u001b[0;34m(write, elem, qnames, namespaces, short_empty_elements, **kwargs)\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    940\u001b[0m                     _serialize_xml(write, e, qnames, None,\n\u001b[0;32m--> 941\u001b[0;31m                                    short_empty_elements=short_empty_elements)\n\u001b[0m\u001b[1;32m    942\u001b[0m                 \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"</\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\">\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    943\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_serialize_xml\u001b[0;34m(write, elem, qnames, namespaces, short_empty_elements, **kwargs)\u001b[0m\n\u001b[1;32m    931\u001b[0m                         \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    932\u001b[0m                     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 933\u001b[0;31m                         \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_escape_attrib\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    934\u001b[0m                     \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" %s=\\\"%s\\\"\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mqnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    935\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mshort_empty_elements\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_escape_attrib\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m   1100\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1101\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1102\u001b[0;31m         \u001b[0m_raise_serialization_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1104\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_escape_attrib_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/riddhishah/anaconda/lib/python3.6/xml/etree/ElementTree.py\u001b[0m in \u001b[0;36m_raise_serialization_error\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m   1055\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_raise_serialization_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1056\u001b[0m     raise TypeError(\n\u001b[0;32m-> 1057\u001b[0;31m         \u001b[0;34m\"cannot serialize %r (type %s)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1058\u001b[0m         )\n\u001b[1;32m   1059\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot serialize 1000.0 (type float)"
      ]
     }
    ],
@@ -214,7 +243,7 @@
     "#Create string of all species\n",
     "species_list = ''\n",
     "for i,k in enumerate(species_info):\n",
-    "    species_list += ' '+ str(k)\n",
+    "    species_list += ' ' + str(k)\n",
     "\n",
     "#Add species string to copied species array element\n",
     "speciesArray.text = species_list\n",
@@ -226,8 +255,99 @@
     "#Append new species array eleemnt\n",
     "root.find('phase').append(speciesArray)\n",
     "\n",
-    "#Make copy of species element\n",
-    "species = deepcopy(root.find('speciesData').find('species'))\n"
+    "#Make copy of a specie element to build elements off of\n",
+    "specie_temp = deepcopy(root.find('speciesData').find('species'))\n",
+    "\n",
+    "#Delete old species entries \n",
+    "example_species = root.find('speciesData').findall('species')\n",
+    "for specie in example_species:\n",
+    "    root.find('speciesData').remove(specie)\n",
+    "\n",
+    "#create species from dict\n",
+    "for i,k in enumerate(species_info):\n",
+    "    \n",
+    "    #create element from template\n",
+    "    new_specie = deepcopy(specie_temp)\n",
+    "\n",
+    "    #set name property to name of specie\n",
+    "    new_specie.set('name',str(k))\n",
+    "    \n",
+    "    #get NASA elements\n",
+    "    thermo = new_specie.find('thermo')\n",
+    "    NASA = thermo.findall('NASA')\n",
+    "    \n",
+    "    #create lower temp NASA element\n",
+    "    NASA[0].set(\"Tmax\",str(species_info[k]['l']['Tmax']))\n",
+    "    NASA[0].set(\"Tmin\",str(species_info[k]['l']['Tmin']))\n",
+    "    \n",
+    "    #get coeefcients string\n",
+    "    low_coeffs =\",\".join(species_info[k]['l']['coeffs'])\n",
+    "    NASA[0].find('floatArray').text = low_coeffs\n",
+    "    \n",
+    "    #create higher temp NASA element\n",
+    "    NASA[1].set(\"Tmax\",species_info[k]['h']['Tmax'])\n",
+    "    NASA[1].set(\"Tmin\",species_info[k]['h']['Tmin'])\n",
+    "    \n",
+    "    #get coeefcients string\n",
+    "    high_coeffs =\",\".join(species_info[k]['h']['coeffs'])\n",
+    "    NASA[1].find('floatArray').text = high_coeffs\n",
+    "\n",
+    "    #add species to root\n",
+    "    root.find('speciesData').append(new_specie)\n",
+    "    \n",
+    "#create xml\n",
+    "tree.write('thermo.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def parse_dict_to_xml(species_dict):\n",
+    "    from copy import deepcopy\n",
+    "    import xml.etree.ElementTree as ET\n",
+    "    #use the template file\n",
+    "    tree = ET.parse('example_thermo.xml')\n",
+    "    root = tree.getroot()\n",
+    "\n",
+    "    #get a node of species\n",
+    "    specie = deepcopy(root.find('speciesData').find('species'))\n",
+    "\n",
+    "    #remove all the species from the parent\n",
+    "    old_species = root.find('speciesData').findall('species')\n",
+    "\n",
+    "    for item in old_species:\n",
+    "        root.find('speciesData').remove(item)\n",
+    "\n",
+    "    for index,key in enumerate(species_dict):\n",
+    "\n",
+    "        temp = deepcopy(specie)\n",
+    "        temp.set('name',str(key))\n",
+    "\n",
+    "        #species_dict[key]['low']['coefs']\n",
+    "\n",
+    "        NASA = temp.find('thermo').findall('NASA')\n",
+    "\n",
+    "        NASA[0].find('floatArray').text = ', '.join(species_dict[key]['low']['coefs'])\n",
+    "        NASA[0].set(\"Tmax\",species_dict[key]['low']['tmax'])\n",
+    "        NASA[0].set(\"Tmin\",species_dict[key]['low']['tmin'])\n",
+    "\n",
+    "        NASA[1].find('floatArray').text = ', '.join(species_dict[key]['high']['coefs'])\n",
+    "        NASA[1].set(\"Tmax\",species_dict[key]['high']['tmax'])\n",
+    "        NASA[1].set(\"Tmin\",species_dict[key]['high']['tmin'])\n",
+    "\n",
+    "        root.find('speciesData').append(temp)\n",
+    "\n",
+    "    #creating my SpeciesArray\n",
+    "    for item in root.find('phase'):\n",
+    "        specie_names = [value for value in species_dict]\n",
+    "        item.text = \" \".join(specie_names)\n",
+    "\n",
+    "    return tree"
    ]
   }
  ],
