--- a/homeworks/HW9/HW9-Final.ipynb
+++ b/homeworks/HW9/HW9-Final.ipynb
@@ -76,72 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['2.56942078E+00', '-8.59741137E-05', '4.19484589E-08', '-1.00177799E-11', '1.22833691E-15', '2.92175791E+04', '4.78433864E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['3.16826710E+00', '-3.27931884E-03', '6.64306396E-06', '-6.12806624E-09', '2.11265971E-12', '2.91222592E+04', '2.05193346E+00']\n",
-      "O2\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['3.28253784E+00', '1.48308754E-03', '-7.57966669E-07', '2.09470555E-10', '-2.16717794E-14', '-1.08845772E+03', '5.45323129E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['3.78245636E+00', '-2.99673416E-03', '9.84730201E-06', '-9.68129509E-09', '3.24372837E-12', '-1.06394356E+03', '3.65767573E+00']\n",
-      "H\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['2.50000001E+00', '-2.30842973E-11', '1.61561948E-14', '-4.73515235E-18', '4.98197357E-22', '2.54736599E+04', '-4.46682914E-01']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['2.50000000E+00', '7.05332819E-13', '-1.99591964E-15', '2.30081632E-18', '-9.27732332E-22', '2.54736599E+04', '-4.46682853E-01']\n",
-      "H2\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['3.33727920E+00', '-4.94024731E-05', '4.99456778E-07', '-1.79566394E-10', '2.00255376E-14', '-9.50158922E+02', '-3.20502331E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['2.34433112E+00', '7.98052075E-03', '-1.94781510E-05', '2.01572094E-08', '-7.37611761E-12', '-9.17935173E+02', '6.83010238E-01']\n",
-      "OH\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['3.09288767E+00', '5.48429716E-04', '1.26505228E-07', '-8.79461556E-11', '1.17412376E-14', '3.85865700E+03', '4.47669610E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['3.99201543E+00', '-2.40131752E-03', '4.61793841E-06', '-3.88113333E-09', '1.36411470E-12', '3.61508056E+03', '-1.03925458E-01']\n",
-      "H2O\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['3.03399249E+00', '2.17691804E-03', '-1.64072518E-07', '-9.70419870E-11', '1.68200992E-14', '-3.00042971E+04', '4.96677010E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['4.19864056E+00', '-2.03643410E-03', '6.52040211E-06', '-5.48797062E-09', '1.77197817E-12', '-3.02937267E+04', '-8.49032208E-01']\n",
-      "HO2\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['4.01721090E+00', '2.23982013E-03', '-6.33658150E-07', '1.14246370E-10', '-1.07908535E-14', '1.11856713E+02', '3.78510215E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['4.30179801E+00', '-4.74912051E-03', '2.11582891E-05', '-2.42763894E-08', '9.29225124E-12', '2.94808040E+02', '3.71666245E+00']\n",
-      "H2O2\n",
-      "3500.000\n",
-      "1000.0\n",
-      "['4.16500285E+00', '4.90831694E-03', '-1.90139225E-06', '3.71185986E-10', '-2.87908305E-14', '-1.78617877E+04', '2.91615662E+00']\n",
-      "1000.0\n",
-      "200.000\n",
-      "['4.27611269E+00', '-5.42822417E-04', '1.67335701E-05', '-2.15770813E-08', '8.62454363E-12', '-1.77025821E+04', '3.43505074E+00']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from copy import deepcopy\n",
@@ -170,10 +107,9 @@
     "    \n",
     "    #find line with species\n",
     "    if strings[-1] == '1':\n",
-    "        #print(strings)\n",
     "        #get species name\n",
     "        specie = strings[0]\n",
-    "        #print('specie: ', strings[0])\n",
+    "        \n",
     "        #get the low temp min and max\n",
     "        low_min = strings[-4]\n",
     "        low_max = 1000.000\n",
@@ -185,14 +121,16 @@
     "    if strings[-1] == '2': \n",
     "        #spilt the line by number as the numbers are not broken up by spaces in txt file\n",
     "        strings = re.findall(r\"[+\\-]?(?:0|[1-9]\\d*)(?:\\.\\d*)?(?:[eE][+\\-]?\\d+)?\", line)\n",
+    "        \n",
     "        #get first 5 high coefs\n",
     "        high_coeffs = []\n",
     "        high_coeffs.extend(strings[0:-1])\n",
-    "        #print(strings[0:-1])\n",
+    "        \n",
     "        \n",
     "    if strings[-1] == '3': \n",
     "        #spilt the line by number as the numbers are not broken up by spaces in txt file\n",
     "        strings = re.findall(r\"[+\\-]?(?:0|[1-9]\\d*)(?:\\.\\d*)?(?:[eE][+\\-]?\\d+)?\", line)\n",
+    "        \n",
     "        #first two are high coeefs\n",
     "        high_coeffs.extend(strings[0:2])\n",
     "        \n",
@@ -203,9 +141,9 @@
     "    if strings[-1] == '4': \n",
     "        #spilt the line by number as the numbers are not broken up by spaces in txt file\n",
     "        strings = re.findall(r\"[+\\-]?(?:0|[1-9]\\d*)(?:\\.\\d*)?(?:[eE][+\\-]?\\d+)?\", line)\n",
+    "        \n",
     "        # get low coefs\n",
     "        low_coeffs.extend(strings[0:-1])\n",
-    "        #print(\"numbers in 4:\",strings[0:-1])\n",
     "\n",
     "        #Add to dictionary\n",
     "        species_info[specie]={'l':{},'h':{}}\n",
@@ -214,32 +152,12 @@
     "        species_info[specie]['l']['coeffs'] = low_coeffs\n",
     "        species_info[specie]['h']['Tmax'] = high_max\n",
     "        species_info[specie]['h']['Tmin'] = high_min\n",
-    "        species_info[specie]['h']['coeffs'] = high_coeffs\n",
-    "        \n",
-    "        #print everything\n",
-    "        #print('specie: ',specie)\n",
-    "        #print('low min: ',low_min)\n",
-    "        #print('low max: ',low_max)\n",
-    "        #print(\"low\",low_coeffs)\n",
-    "        #print('high min: ',high_min)\n",
-    "        #print('high max: ',high_max)\n",
-    "        #print(\"high\",high_coeffs)\n",
-    "        \n",
-    "#Print out dict to test\n",
-    "\n",
-    "for i,k in enumerate(species_info):\n",
-    "    print(k)\n",
-    "    print(species_info[k]['h']['Tmax'])\n",
-    "    print(species_info[k]['h']['Tmin'])\n",
-    "    print(species_info[k]['h']['coeffs'])\n",
-    "    print(species_info[k]['l']['Tmax'])\n",
-    "    print(species_info[k]['l']['Tmin'])\n",
-    "    print(species_info[k]['l']['coeffs'])"
+    "        species_info[specie]['h']['coeffs'] = high_coeffs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,15 +230,6 @@
     "#create xml\n",
     "tree.write('thermo.xml')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
