--- a/lectures/L19/Exercise L19-Final.ipynb
+++ b/lectures/L19/Exercise L19-Final.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
@@ -638,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1104,7 @@
        "[175 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,6 +1112,232 @@
    "source": [
     "#Question 1\n",
     "query = '''SELECT contributors.last_name, contributors.first_name,candidates.last_name FROM candidates INNER JOIN contributors ON contributors.candidate_id = candidates.id'''\n",
+    "viz_tables(['last_name','first_name','candidate_id'], query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>candidate_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Buckler</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Buckler</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buckheit</td>\n",
+       "      <td>Bruce</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Buckel</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buckel</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Buckel</td>\n",
+       "      <td>Linda</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Buck</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Buck</td>\n",
+       "      <td>Jay</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Buck</td>\n",
+       "      <td>Blaine</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Buck</td>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Buck</td>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Buchman</td>\n",
+       "      <td>Mark M</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Bucher</td>\n",
+       "      <td>Ida</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Buchanek</td>\n",
+       "      <td>Elizabeth</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Buchanan</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Harrison</td>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   last_name first_name candidate_id\n",
+       "0    Buckler      Steve        Obama\n",
+       "1    Buckler      Steve        Obama\n",
+       "2   Buckheit      Bruce        Obama\n",
+       "3     Buckel      Linda        Obama\n",
+       "4     Buckel      Linda        Obama\n",
+       "5     Buckel      Linda        Obama\n",
+       "6       Buck     Thomas        Obama\n",
+       "7       Buck        Jay        Obama\n",
+       "8       Buck     Blaine        Obama\n",
+       "9       Buck    Barbara        Obama\n",
+       "10      Buck    Barbara        Obama\n",
+       "11   Buchman     Mark M        Obama\n",
+       "12    Bucher        Ida        Obama\n",
+       "13  Buchanek  Elizabeth        Obama\n",
+       "14  Buchanan       John        Obama\n",
+       "15  Buchanan       John        Obama\n",
+       "16  Buchanan       John        Obama\n",
+       "17  Buchanan       John        Obama\n",
+       "18  Buchanan       John        Obama\n",
+       "19  Buchanan       John        Obama\n",
+       "20  Buchanan       John        Obama\n",
+       "21  Buchanan       John        Obama\n",
+       "22  Buchanan       John        Obama\n",
+       "23  Buchanan       John        Obama\n",
+       "24  Harrison       Ryan        Obama"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question 2\n",
+    "query = '''SELECT contributors.last_name, contributors.first_name,candidates.last_name FROM candidates INNER JOIN contributors ON contributors.candidate_id = candidates.id WHERE candidate_id = (SELECT id from candidates WHERE last_name = \"Obama\")'''\n",
     "viz_tables(['last_name','first_name','candidate_id'], query)\n"
    ]
   },
@@ -1199,6 +1423,131 @@
     "|    ...               |   ...                  |    ...              |\n",
     "\n",
     "   The table should be created using the `LEFT JOIN` clause on the contributors table by joining the candidates table by the `id` column.  The `average contribution` column and `number of contributors` column should be obtained using the `AVG` and `COUNT` `SQL` functions.  Finally, you should use the `GROUP BY` clause on the candidates last name."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1:\n",
+    "\n",
+    "| nA | A.attr | nB |B.attr|\n",
+    "| :::| :::::: | :: |::::::|\n",
+    "| s1 | 23     | t1 | 60   |\n",
+    "| s2 | 7      | t3 | 22   |\n",
+    "| s3 | 15     | t3 | 22   |\n",
+    "| s4 | 31     | t1 | 60   |\n",
+    "\n",
+    "\n",
+    "#### Question 2:\n",
+    "\n",
+    "| nA   | A.attr | nB |B.attr|\n",
+    "| :::::| :::::: | :: |::::::|\n",
+    "| s1   | 23     | t1 | 60   |\n",
+    "| None | NaN    | t2 | 14   |\n",
+    "| s2   | 7      | t3 | 22   |\n",
+    "| s3   | 15     | t3 | 22   |\n",
+    "| s4   | 31     | t1 | 60   |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>average contribution</th>\n",
+       "      <th>number of contributors</th>\n",
+       "      <th>candidate lastname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50.6000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Clinton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1360.0000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Giuliani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>772.0000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Huckabee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>452.6000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>McCain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>472.4356</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Obama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-519.7088</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Paul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>156.0000</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Romney</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   average contribution  number of contributors candidate lastname\n",
+       "0               50.6000                      25            Clinton\n",
+       "1            -1360.0000                      25           Giuliani\n",
+       "2              772.0000                      25           Huckabee\n",
+       "3              452.6000                      25             McCain\n",
+       "4              472.4356                      25              Obama\n",
+       "5             -519.7088                      25               Paul\n",
+       "6              156.0000                      25             Romney"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question 3\n",
+    "query = '''SELECT AVG(contributors.amount), COUNT(contributors.first_name), candidates.last_name FROM contributors LEFT JOIN candidates ON contributors.candidate_id = candidates.id GROUP BY candidates.last_name'''\n",
+    "viz_tables(['average contribution','number of contributors','candidate lastname'], query)\n"
    ]
   },
   {
