--- a/homeworks/HW10/HW10-Final.ipynb
+++ b/homeworks/HW10/HW10-Final.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,10 +549,10 @@
     "    #get the coeffs based on temp range\n",
     "    if temp_range == 'low':\n",
     "        query = '''SELECT COEFF_1,COEFF_2,COEFF_3,COEFF_4,COEFF_5,COEFF_6,COEFF_7 FROM LOW WHERE SPECIES_NAME = ? '''\n",
-    "        coeffs = cursor.execute(query,species_name).fetchall()\n",
+    "        coeffs = cursor.execute(query,(species_name,)).fetchall()\n",
     "    elif temp_range == 'high': \n",
     "        query = '''SELECT COEFF_1,COEFF_2,COEFF_3,COEFF_4,COEFF_5,COEFF_6,COEFF_7 FROM HIGH WHERE SPECIES_NAME = ? '''\n",
-    "        coeffs = cursor.execute(query,species_name).fetchall()\n",
+    "        coeffs = cursor.execute(query,(species_name,)).fetchall()\n",
     "    else: #make sure temp range is correctly inputed\n",
     "        raise ValueError(\"Must input 'low' or 'high' for temp_range\")\n",
     "    return coeffs"
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -568,14 +568,14 @@
      "output_type": "stream",
      "text": [
       "return type:  <class 'list'>\n",
-      "[('2.56942078E+00,', '-8.59741137E-05,', '4.19484589E-08,', '-1.00177799E-11,', '1.22833691E-15,', '2.92175791E+04,', '4.78433864E+00,')]\n"
+      "[('3.09288767E+00,', '5.48429716E-04,', '1.26505228E-07,', '-8.79461556E-11,', '1.17412376E-14,', '3.85865700E+03,', '4.47669610E+00,')]\n"
      ]
     }
    ],
    "source": [
     "# get_coeffs function in action\n",
     "print(\"return type: \",type(get_coeffs('O','high')))\n",
-    "print(get_coeffs('O','high'))"
+    "print(get_coeffs('OH','high'))"
    ]
   },
   {
@@ -644,6 +644,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SPECIES_NAME</th>\n",
+       "      <th>TLOW</th>\n",
+       "      <th>THIGH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>O</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>O2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>H</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>H2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>H2O</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HO2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H2O2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SPECIES_NAME   TLOW   THIGH\n",
+       "0            O  200.0  3500.0\n",
+       "1           O2  200.0  3500.0\n",
+       "2            H  200.0  3500.0\n",
+       "3           H2  200.0  3500.0\n",
+       "4           OH  200.0  3500.0\n",
+       "5          H2O  200.0  3500.0\n",
+       "6          HO2  200.0  3500.0\n",
+       "7         H2O2  200.0  3500.0"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''CREATE TABLE ALL_TEMPS AS SELECT LOW.SPECIES_NAME, LOW.TLOW, HIGH.THIGH FROM LOW INNER JOIN HIGH ON LOW.SPECIES_NAME = HIGH.SPECIES_NAME''')\n",
+    "db.commit()\n",
+    "candidate_cols = [col[1] for col in cursor.execute(\"PRAGMA table_info(ALL_TEMPS)\")]\n",
+    "query = '''SELECT * FROM ALL_TEMPS'''\n",
+    "viz_tables(candidate_cols, query)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -657,6 +766,49 @@
     "```\n",
     "\n",
     "Note that `TEMP_LOW` is the lowest temperature in the `LOW` range and `TEMP_HIGH` is the highest temperature in the `HIGH` range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_range(species_name):\n",
+    "    #get list of species\n",
+    "    query = '''SELECT SPECIES_NAME FROM LOW'''\n",
+    "    species_list = cursor.execute(query).fetchall()\n",
+    "    species_list = [s[0].strip(',') for s in species_list]\n",
+    "    \n",
+    "    #check that specie_name inputed it correct type of species\n",
+    "    if species_name not in species_list:\n",
+    "        raise ValueError(\"Input must be 'O','O2','H','H2','OH','H2O','HO2','H2O2' for species_name\")\n",
+    "    query = '''SELECT THIGH - TLOW FROM ALL_TEMPS WHERE SPECIES_NAME = ?'''\n",
+    "    q = cursor.execute(query,(species_name,)).fetchall()\n",
+    "    for num in q:\n",
+    "        temp_range = str(num[0]).strip(',')\n",
+    "    return temp_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3300.0'"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get_range in action\n",
+    "get_range('H2')"
    ]
   },
   {
