--- a/homeworks/HW7/HW7-Final.ipynb
+++ b/homeworks/HW7/HW7-Final.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -44,8 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class LinkedList():\n",
@@ -62,7 +64,7 @@
     "        node = self.head_node\n",
     "        if not (index > self.len):\n",
     "            while node_num != index:\n",
-    "                if(node.next == None):\n",
+    "                if(node.next != None):\n",
     "                    node, node_num = node.next,node_num+1\n",
     "            return node.value\n",
     "        else:\n",
@@ -83,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'LinkedList(3)'"
+       "'No element at this index.'"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +104,7 @@
     "llist = LinkedList(1)\n",
     "llist.insert_front(2)\n",
     "llist.insert_front(3)\n",
-    "llist.__repr__()"
+    "llist.__getitem__(4)"
    ]
   },
   {
